# ChatBoxX-AI

./: .dockerignore  .env  .env.example  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  fix-script.sh
config/: config.toml  log.toml  nginx.conf
config/ssl/: cert.pem  key.pem
db/migrations/: init.sql
deploy/: Dockerfile  docker-compose.yml  heroku.yml
include/api/controllers/: auth_controller.h  dialog_controller.h  file_controller.h  message_controller.h  model_controller.h
include/api/middlewares/: auth_middleware.h  cors_middleware.h  rate_limiter.h  request_logger.h
include/api/routes/: api_router.h
include/api/validators/: auth_validator.h  dialog_validator.h  message_validator.h
include/common/: constants.h  error_codes.h  result.h  types.h
include/core/async/: coroutine_pool.h  event_loop.h  task.h
include/core/config/: config_manager.h  config_types.h
include/core/db/: connection_pool.h  prepared_statement.h  transaction.h
include/core/http/: http_server.h  request.h  response.h  router.h
include/core/memory/: memory_pool.h  zero_copy_buffer.h
include/core/utils/: jwt_helper.h  string_utils.h  uuid.h
include/core/websocket/: websocket_server.h  websocket_session.h
include/models/: dialog.h  file.h  message.h  user.h
include/services/ai/: model_factory.h  model_interface.h  model_service.h
include/services/ai/models/: deepseek_r1_model.h  deepseek_v3_model.h  tongyi_model.h  wenxin_model.h  xunfei_model.h
include/services/ai/streaming/: stream_processor.h
include/services/auth/: auth_service.h
include/services/dialog/: dialog_service.h
include/services/file/: file_service.h
include/services/message/: message_service.h
src/: main.cpp
src/api/controllers/: auth_controller.cpp  dialog_controller.cpp  file_controller.cpp  message_controller.cpp  model_controller.cpp
src/api/middlewares/: auth_middleware.cpp  cors_middleware.cpp  rate_limiter.cpp  request_logger.cpp
src/api/routes/: api_router.cpp
src/api/validators/: auth_validator.cpp  dialog_validator.cpp  message_validator.cpp
src/common/: constants.cpp  error_codes.cpp  result.cpp  types.cpp
src/core/async/: coroutine_pool.cpp  event_loop.cpp  task.cpp
src/core/config/: config_manager.cpp  config_types.cpp
src/core/db/: connection_pool.cpp  prepared_statement.cpp  transaction.cpp
src/core/http/: http_server.cpp  request.cpp  response.cpp  router.cpp
src/core/memory/: memory_pool.cpp  zero_copy_buffer.cpp
src/core/utils/: jwt_helper.cpp  string_utils.cpp  uuid.cpp
src/core/websocket/: websocket_server.cpp  websocket_session.cpp
src/models/: dialog.cpp  file.cpp  message.cpp  user.cpp
src/services/ai/: model_factory.cpp  model_service.cpp
src/services/ai/models/: deepseek_r1_model.cpp  deepseek_v3_model.cpp  tongyi_model.cpp  wenxin_model.cpp  xunfei_model.cpp
src/services/ai/streaming/: stream_processor.cpp
src/services/auth/: auth_service.cpp
src/services/dialog/: dialog_service.cpp
src/services/file/: file_service.cpp
src/services/message/: message_service.cpp
tests/: auth_service_test.cpp  utils_test.cpp  uuid_test.cpp
tests/unit/utils/: jwt_helper_test.cpp  string_utils_test.cpp
